Improve Tests, Add HTTP Tests
