# internal/infrastructure/database/database.go
@@ -3,7 +3,6 @@ package database
 import (
 	"context"
 	"testing"
-	"time"
 
 	"oppossome/serverpouch/internal/domain/server"
 	"oppossome/serverpouch/internal/infrastructure/database/schema"
@@ -13,16 +12,15 @@ import (
 	_ "github.com/lib/pq"
 	"github.com/pkg/errors"
 	"github.com/rs/zerolog"
-	"github.com/testcontainers/testcontainers-go"
-	"github.com/testcontainers/testcontainers-go/modules/postgres"
-	"github.com/testcontainers/testcontainers-go/wait"
+	migrate "github.com/rubenv/sql-migrate"
+	"github.com/stretchr/testify/assert"
 )
 
 type Database interface {
-	GetServerConfig(context.Context, uuid.UUID) (server.ServerInstanceConfig, error)
-	ListServerConfigs(context.Context) ([]server.ServerInstanceConfig, error)
-	UpdateServerConfig(context.Context, uuid.UUID, server.ServerInstanceConfig) (server.ServerInstanceConfig, error)
-	CreateServerConfig(context.Context, server.ServerInstanceConfig) (server.ServerInstanceConfig, error)
+	GetServer(context.Context, uuid.UUID) (server.ServerInstanceConfig, error)
+	ListServers(context.Context) ([]server.ServerInstanceConfig, error)
+	UpdateServer(context.Context, uuid.UUID, server.ServerInstanceConfig) (server.ServerInstanceConfig, error)
+	CreateServer(context.Context, server.ServerInstanceConfig) (server.ServerInstanceConfig, error)
 }
 
 type databaseImpl struct {
@@ -48,48 +46,19 @@ func New(ctx context.Context, connStr string) (*databaseImpl, error) {
 	return database, nil
 }
 
-func NewTestDatabase(t *testing.T) (*schema.Queries, *databaseImpl, error) {
-	postgresContainer, err := postgres.Run(
-		t.Context(),
-		"postgres:16-alpine",
-		postgres.WithUsername("username"),
-		postgres.WithPassword("password"),
-		testcontainers.WithWaitStrategy(
-			wait.ForLog("database system is ready to accept connections").
-				WithOccurrence(2).
-				WithStartupTimeout(5*time.Second),
-		),
-	)
-	if err != nil {
-		return nil, nil, err
-	}
+func NewTestDatabase(t *testing.T) (*schema.Queries, *databaseImpl) {
+	connStr := schema.SetupTestContainer(t)
 
-	t.Cleanup(func() {
-		if err := postgresContainer.Terminate(context.Background()); err != nil {
-			t.Errorf("failed to terminate postgres container: %v", err)
-		}
-	})
-
-	connStr, err := postgresContainer.ConnectionString(t.Context(), "sslmode=disable")
-	if err != nil {
-		return nil, nil, err
-	}
-
-	err = schema.Migrate(t.Context(), connStr)
-	if err != nil {
-		return nil, nil, err
-	}
+	_, err := schema.Migrate(t.Context(), connStr, migrate.Up)
+	assert.NoError(t, err)
 
 	dbImpl, err := New(t.Context(), connStr)
-	if err != nil {
-		return nil, nil, err
-	}
+	assert.NoError(t, err)
 
 	t.Cleanup(func() {
-		if err := dbImpl.conn.Close(t.Context()); err != nil {
-			t.Errorf("failed to close database connection: %v", err)
-		}
+		err := dbImpl.conn.Close(t.Context())
+		assert.NoError(t, err, "failed to close database connection")
 	})
 
-	return dbImpl.queries, dbImpl, nil
+	return dbImpl.queries, dbImpl
 }
